# visualization.milkdrop2

./: .gitignore  CMakeLists.txt  azure-pipelines.yml
Binaries/visualization.milkdrop2/: addon.xml
Binaries/visualization.milkdrop2/Milkdrop2/data/: include.fx
Development/Src/Milkdrop2StandAlone/: Milkdrop2StandAlone.vcxproj
Development/Src/Milkdrop2StandAlone/Src/: StandAlone.cpp
Development/Src/Milkdrop2XBMC/: Milkdrop2XBMC.vcxproj
Development/Src/Milkdrop2XBMC/Src/: Milkdrop2XBMC.cpp
Development/Src/vis_milk2/: vis_milk2.vcxproj  vis_milk2.vcxproj.filters
Development/Src/vis_milk2/DX11/: ColorPixelShader.hlsl  ConstantTable.cpp  ConstantTable.h  DX11Context.cpp  DX11Context.h  DefaultVertexShader.hlsl  DiffusePixelShader.hlsl  Texture2PixelShader.hlsl  TexturePixelShader.hlsl
Development/Src/vis_milk2/vis_milk2/: dxcontext.h  milkdropfs.cpp  plugin.cpp  plugin.h  pluginshell.cpp  pluginshell.h  state.h  support.h  texmgr.h
lib/vis_milk2/: CMakeLists.txt
lib/vis_milk2/dx11/: ConstantTable.cpp  ConstantTable.h  DX11Context.cpp
lib/vis_milk2/ns-eel2/: .gitignore  CMakeLists.txt  asm-nseel-x64.asm  eel_disasm.cpp  eel_strings.h  ns-eel-addfuncs.h  ns-eel.h  nseel-compiler.c  nseel-eval.c
lib/vis_milk2/vis_milk2/: gstring.h  milkdropfs.cpp  plugin.cpp  plugin.h  state.cpp  texmgr.cpp
visualization.milkdrop2/: addon.xml.in
